[project]
name = "pydsxkline"
version = "1.1.3"
authors = [
  { name="fangyunsm", email="934476300@qq.com" },
]
description = "pydsxkline是一个有趣的python包，一行代码即可显示K线图，主要应用于股票金融量化领域，当您想要把股票数据图形化的时候，可以试试这个小工具，希望能帮到有需要的朋友。"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dsxkline/dsxkline_python"
"Bug Tracker" = "https://github.com/dsxkline/dsxkline_python/issues"